tests/extends/extends.exp
Error ------------------------------------------------------------------------------------------------------ test.js:8:7

Cannot extend `C` [1] with `B` because string [1] is not inheritable. [incompatible-use]

   test.js:8:7
   8| class B extends C {}
            ^

References:
   test.js:8:17
   8| class B extends C {}
                      ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:13:30

`B` [1] is incompatible with `A` [2]. [incompatible-type]

   test.js:13:30
   13|   invariant(value instanceof B);
                                    ^

References:
   test.js:8:7
    8| class B extends C {}
             ^ [1]
   test.js:5:18
    5| type AOrString = A | string;
                        ^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:26:28

`A` [1] is incompatible with `C` [2]. [incompatible-type]

   test.js:26:28
   26|     invariant(c instanceof A);
                                  ^

References:
   test.js:17:9
   17|   class A  { }
               ^ [1]
   test.js:23:29
   23|   function f(a: A, b: B, c: C) {
                                   ^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:27:28

`C` [1] is incompatible with `A` [2]. [incompatible-type]

   test.js:27:28
   27|     invariant(a instanceof C)
                                  ^

References:
   test.js:19:9
   19|   class C { }
               ^ [1]
   test.js:23:17
   23|   function f(a: A, b: B, c: C) {
                       ^ [2]



Found 4 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
